# webio

./: .env.example  .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/: ci.yml
doc/: 00-head.md  01-overview.md  02-philosophy.md  03-installation.md  04-quick-start.md  05-dynamic-routing.md  05-modular-configuration.md  06-modular-configuration.md  07-custom-404-handlers.md  07-log-reply.md  08-application-tailoring.md  08-custom-startup-banner.md  09-application-settings.md  10-extensions.md  11-deployment.md  12-license.md
examples/: 01-advanced_routing_live_monitoring.md  02-advanced_routing_branding.md  03-webio-executor.md  04-webio-macros-async-routing.md  05-mime-type-configuration.md  main.rs_0.2.0-alpha_28_01_2026.md  main.rs_0.3.0-alpha_29_01_2026.md  main.rs_0.4.1-alpha_04_02_2026.md  main.rs_0.4.3-alpha_06_02_2026.md  main.rs_0.4.4-alpha_06_02_2026.md  main.rs_0.5.0-alpha_21_02_2026.md  main.rs_0.8.0-alpha_25_02_2026.md  main.rs_0.9.0_alpha_12_03_2026.md
src/: lib.rs
src/core/: mod.rs
src/crypto/: mod.rs
src/engine/: mod.rs
src/examples/: main_001_28_01_2026.md
src/http/: mod.rs
src/mime/: mod.rs
src/runtime/: mod.rs
src/server/: mod.rs
src/utils/: mod.rs
tests/: integration_suite.rs
tests/hello/: hello_test.rs
tests/routing/: mod.rs  routing_test_01.rs  routing_test_02.rs
