[package]
name = "webio"
version = "0.4.1-alpha"
authors = ["Montasir Mirghani <montasir@fluxor.one>"]
edition = "2024"
description = "A minimalist async web framework for Rust with a zero-dependency philosophy."
license = "MIT"
homepage = "https://github.com/dr-montasir/webio"
repository = "https://github.com/dr-montasir/webio"
readme = "README.md"
keywords = ["std", "web", "async", "io"]
categories = ["network-programming", "asynchronous", "web-programming::http-server"]
exclude = [
    ".github/**",
    "examples/**",
    "tests/**",
    "Cargo.lock",
    "dev.md",
    ".env"
]

[dependencies]

[lib]
name = "webio"
path = "src/lib.rs"
