[package]
name = "webio"
version = "0.7.0-alpha"
authors = ["Montasir Mirghani <montasir@fluxor.one>"]
edition = "2024"
description = "A minimalist, high-performance web framework for Rust built with a zero-dependency philosophy."
license = "MIT"
homepage = "https://github.com/dr-montasir/webio"
repository = "https://github.com/dr-montasir/webio"
readme = "README.md"
keywords = ["std", "web", "async", "io", "nodeps"]
categories = ["network-programming", "asynchronous", "web-programming::http-server"]
exclude = [
    ".github/**",
    "examples/**",
    "tests/**",
    "webio-logo/**",
    "Cargo.lock",
    "dev.md",
    ".env"
]

[dependencies]

[lib]
name = "webio"
path = "src/lib.rs"
