[package]
name = "webio"
version = "0.9.5-alpha"
authors = ["Montasir Mirghani <montasir@webio.tech>"]
edition = "2024"
description = "A minimalist, high-performance Rust web framework built with a zero-dependency philosophy for maximum speed and low memory footprint."
license = "MIT"
homepage = "https://webio.tech"
repository = "https://github.com/dr-montasir/webio"
readme = "README.md"
keywords = ["std", "web", "async", "io", "nodeps"]
categories = ["network-programming", "asynchronous", "web-programming::http-server"]
exclude = [
    ".github/**",
    "examples/**",
    "tests/**",
    "webio-logo/**",
    "Cargo.lock",
    "dev.md",
    ".env",
    ".env.example",
]

[dependencies]

[lib]
name = "webio"
path = "src/lib.rs"
